--- a/Maintenance/maintenance.tex
+++ b/Maintenance/maintenance.tex
@@ -65,14 +65,15 @@ Google Chrome & I used Google Chrome to check that my Javascript code functioned
 
 \subsection{General User Interface}
 
-On every part of my user interface a QMenuBar is at the top, allowing you to access functionality of any tab from anywhere in the program, for example if you are on the profile tab you can click on the 'support' part of the QMenuBar and click 'contact support' on the drop down options and the view of the program will change to the support tab and load the correct widgets to allow for the user to contact support. A QStatusBar is also available on every page which displays messages at appropriate times, informing the user about changes that have occurred.
+The general user interface is implemented in order to enable the user to get used to the program quickly. On every part of my user interface a QMenuBar is at the top, allowing you to access functionality of any tab from anywhere in the program, for example if you are on the profile tab you can click on the 'support' part of the QMenuBar and click 'contact support' on the drop down options and the view of the program will change to the support tab and load the correct widgets to allow for the user to contact support. A QStatusBar is also available on every page which displays messages at appropriate times, informing the user about changes that have occurred.
 
 \subsection{Profile Tab User Interface}
 
-The profile tab is available for the user to tailor the program to include their personal information and therefore make a program which is designed around them. The profile tab consists of a QToolBar at the top of the tab labeled 'Change Picture' widget allowing you to change your profile picture which is displayed in a QGraphicsScene. Below the profile picture there are 2 QPushButtons labelled 'Edit' and 'Save'. To the right of this there are three QLineEdits showing the users first name, last name and email address, to the right of these QLineEdits is a Recently completed tricks list. Below the tabbed interface a QProgressBar which shows the percentage of completed tricks.
+The profile tab is available for the user to tailor the program to include their personal information and therefore make a program which is designed around them. The profile tab consists of a QToolBar at the top of the tab labeled 'Change Picture' widget allowing you to change your profile picture which is displayed in a QGraphicsScene. Below the profile picture there are 2 QPushButtons labeled 'Edit' and 'Save'. To the right of this there are three QLineEdits showing the users first name, last name and email address, to the right of these QLineEdits is a Recently completed tricks list. Below the tabbed interface a QProgressBar which shows the percentage of completed tricks.
 
 \subsection{Editing Profile Table Information}
-Once the edit button is clicked the QLineEdits containing the first name, last name and email address of the user become available to edit. Once the QLineEdits have been changed you may click the 'save' button to save the changes.Once the 'Change Picture' button is pressed a QFileDialog appears allowing you to choose an image from your documents to set as your profile picture.
+
+Editing the profiles information is an important aspect of the application as personal information chages, therefore enabling the editing of information allows the program to keep up to date with these changes. Once the edit button is clicked the QLineEdits containing the first name, last name and email address of the user become available to edit. Once the QLineEdits have been changed you may click the 'save' button to save the changes.Once the 'Change Picture' button is pressed a QFileDialog appears allowing you to choose an image from your documents to set as your profile picture.
 
 
 
@@ -82,7 +83,7 @@ The tricks tab is available for the user to store all of the tricks that the use
 
 \subsection{Editing Trick Table Information}
 
-Once the 'Add Trick' button has been pressed you can fill in information about a trick, once the 'save' button below the form has been pressed the trick will be saved to the database if all the fields are valid. If a field is invalid then the invalid fields will be highlighted red. To delete a trick you select the row you wish to delete and then press the delete key, a confirmation message will appear and you click the 'save' button to accept the delete. To edit a trick you have to run through the CLI menu and then run through the appropriate steps.
+Editing the trick table allows the user to add and delete tricks. Once the 'Add Trick' button has been pressed you can fill in information about a trick, once the 'save' button below the form has been pressed the trick will be saved to the database if all the fields are valid. If a field is invalid then the invalid fields will be highlighted red. To delete a trick you select the row you wish to delete and then press the delete key, a confirmation message will appear and you click the 'save' button to accept the delete. To edit a trick you have to run through the CLI menu and then run through the appropriate steps.
 
 
 
@@ -112,7 +113,7 @@ The support tab is available for the user to send emails to me about any issues 
 
 \subsection{Reporting a Bug}
 
-A series of QLineEdits must be filled in, in order to send a message about a bug in the program. This includes: Users name and email address, as well as the actual message saying what the bug is. 
+Reporting bugs is important to the developer as issues that have not been identified can be flagged and fixed. To report a bug a series of QLineEdits must be filled in, in order to send a message about a bug in the program. This includes: Users name and email address, as well as the actual message saying what the bug is. 
 
 
 
@@ -355,7 +356,7 @@ The figure above shows the flow of user interface that occurs once the Support t
 
 \subsection{ER Diagram}
 
-This ER diagram is identical to the ER diagram shown in my design section (Figure \ref{fig:Entity Diagram} on page \pageref{fig:Entity Diagram}
+This ER diagram is identical to the ER diagram shown in my design section (Figure \ref{fig:Entity Diagram} on page \pageref{fig:Entity Diagram}).
 
 \begin{figure}[H]
     \includegraphics[width=\textwidth]{./Design/EntityRelationships2.pdf}
@@ -531,7 +532,7 @@ The SQL query above is the code that I used to select all of the review informat
 
 \section {Testing}
 
-To view my full test plan look at Figure \ref{tab:TestingResults} on page \pageref{tab:TestingResults}
+To view my full test plan look at Figure \ref{tab:TestingResults} on page \pageref{tab:TestingResults}.
 
 \subsection{Summary of Results}
 
@@ -569,25 +570,25 @@ My GUI is incomplete for my program as the review tabs functionality is not pres
 
 \pythonfile[firstline=8,lastline=18]{./Implementation/skatepark_view_only.py}
 
-As I was having issues with the javascript functioning correctly within the python webpage, I decided to override the QWebPage class in order to activate the Javascript console message method. From this I was able to print the error message along with the line number the error is on and the error messages source ID which helped me debug my Javascript code problem. The full code for this module can be found in subsection 4.10.12.
+As I was having issues with the javascript functioning correctly within the python webpage, I decided to override the QWebPage class in order to activate the javascript console message method. From this I was able to print the error message along with the line number the error is on and the error messages source ID which helped me debug my Javascript code problem. The full code for this module can be found in subsection 4.10.12.
 
 \subsubsection{Google Maps Javascript}
 \pythonfile[firstline=100,lastline=206]{./Implementation/skatepark_view_only.py}
 
-For my program, I used multiple programming languages. For example: Python, Javascript, HTML and SQL. In my program I created an interactive google maps object in Javascript. I had to activate my own API key (AIzaSyC5RcJ7vLSEYF32KqDusnuRcLJiHW8EbDg) to send requests to the Google maps server. My code above shows the HTML, Javascript hybrid I used to create the interactive google maps object. This code contains all of the functions involved in the processes that my map object can carry out. For example: adding markers, hiding markers and adding an info window to a marker. The setHtml line of code at the bottom of the code snipper above (line number 107) is used to set the HTML code to my custom web page that I created. The web page is then set to a layout in the skateparks tab. The specific algorithms in the HTML code are discussed in the 'Self-Created Algorithms' (Subsection 4.7.2). The full code for this module can be found in subsection 4.10.12.
+For my program, I used multiple programming languages. For example: Python, Javascript, HTML and SQL. In my program I created an interactive google maps object in Javascript. I had to activate my own API key (AIzaSyC5RcJ7vLSEYF32KqDusnuRcLJiHW8EbDg) to send requests to the Google maps server. My code above shows the HTML, Javascript hybrid I used to create the interactive Google maps object. This code contains all of the functions involved in the processes that my map object can carry out. For example: adding markers, hiding markers and adding an info window to a marker. The 'setHtml' line of code at the bottom of the code snipper above (line number 107) is used to set the HTML code to my custom web page that I created. The web page is then set to a layout in the skateparks tab. The specific algorithms in the HTML code are discussed in the 'Self-Created Algorithms' (Subsection 4.7.2). The full code for this module can be found in subsection 4.10.12.
 
 
 
 \subsubsection{Running Javascript From Python}
 \pythonfile[firstline=55,lastline=55]{./Implementation/skatepark_view_only.py}
 
-To run specific Javascript functions within my python file I had to access the custom pages' main frame and then run an 'evaluateJavaScript' function which then analyses my Javascript code and runs the corresponding function. The full code for this module can be found in subsection 4.10.12.
+To run specific javascript functions within my python file I had to access the custom pages' main frame and then run an 'evaluateJavaScript' function which then analyses my javascript code and runs the corresponding function. The full code for this module can be found in subsection 4.10.12.
 
 
 \subsubsection{Mouse Press Event To Allow for Coordinates To Be Calculated}
 \pythonfile[firstline=45,lastline=57]{./Implementation/skatepark_view_only.py}
 
-My code above shows the python code for listening for a mouse click on the google maps object. If 'add skatepark' form on the side of the tab was open then the coordinates would be filled into the longitude and latitude QLineEdits. The full code for this module can be found in subsection 4.10.12.
+My code above shows the python code for listening for a mouse click on the Google maps object. If 'add skatepark' form on the side of the tab was open then the coordinates would be filled into the longitude and latitude QLineEdits. The full code for this module can be found in subsection 4.10.12.
 
 
 
@@ -616,7 +617,7 @@ The full code for this module can be found in subsection  4.10.10
 
 \pythonfile[firstline=25,lastline=34]{./Implementation/support_widget.py}
 
-The code above shows the python code I used to allow for an email to be sent to me with details about bugs in my program. First of all I set the MIMEText of the email to include the message that the user set, followed by their email address. I then set a preset subject of the email as 'Skateboard Progress Tracker Support' and then send the email from a specially make google email account, to my personal email. I then use Googles' SMTP protocols to automatically send the email from my google mail account to my personal email. The full code for this module can be found in subsection 4.10.18
+The code above shows the python code I used to allow for an email to be sent to me with details about bugs in my program. First of all I set the MIMEText of the email to include the message that the user set, followed by their email address. I then set a preset subject of the email as 'Skateboard Progress Tracker Support' and then send the email from a specially make google email account, to my personal email. I then used Google's SMTP protocols to automatically send the email from my google mail account to my personal email. The full code for this module can be found in subsection 4.10.18
 
 
 \subsection{Self-created Algorithms}
@@ -630,7 +631,7 @@ The code above shows the first step in adding a marker to the Google maps object
 
 \pythonfile[firstline=142,lastline=146]{./Implementation/skatepark_view_only.py}
 
-The above code shows the javascript function that is run. I create a javascript variable that contains a new google maps latitude longitude object. This function then passes this object, the description and name into the javacript function 'AddMarker'
+The above code shows the javascript function that is run. I create a javascript variable that contains a new Google maps latitude longitude object. This function then passes this object, the description and name into the javacript function 'AddMarker'
 
 
 
@@ -670,7 +671,7 @@ No settings need to be changed on the client's computer to run my program. All o
 \begin{itemize}
 \item Acknowledgment 1 - YouTube link regular expression - Found on \url{http://stackoverflow.com/questions/3717115/regular-expression-for-youtube-links} by Stack Overflow user \url{http://stackoverflow.com/users/3652125/fanmade}
 \item Acknowledgment 2 - Google Maps JavaScript API - Gained from Google's APIs Console. - \url{https://developers.google.com/maps/documentation/javascript/tutorial}
-\item Acknowledgment 3 - Javascript help on Stack Overflow - \url{http://stackoverflow.com/questions/28253168/running-a-javascript-function-from-qwebview-google-maps-api-pyqt} I posted a question to attempt to resolve an issue I had with my Javascript code.
+\item Acknowledgment 3 - Javascript help on Stack Overflow -  \url{http://stackoverflow.com/questions/28253168/running-a-javascript-function-from-qwebview \ -google-maps-api- pyqt} I posted a question to attempt to resolve an issue I had with my Javascript code.
 \end{itemize}
 \begin{landscape}
 \section{Code Listing}
